fixed flexbox wrap for the GIPH container

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,8 @@
 }
 #giphyContainer{
     margin-left: 3%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
